@@ -5,6 +5,8 @@ Version 0.12
 ------------
 (codename not selected, release XXX XX, 2008)
 
+- Add Tango style, written by Andre Roberge for the Crunchy project.
+
 - Add Python3TracebackLexer and ``python3`` option to 
   PythonConsoleLexer.
 
